Disallow form for new instances if reached limit
Co-Authored-By: zachmandeville <zachmandeville@users.noreply.github.com>

--- a/charts/sharingio-pair/templates/deployment-client.yaml
+++ b/charts/sharingio-pair/templates/deployment-client.yaml
@@ -72,6 +72,8 @@ spec:
               value: "{{ range .Values.permittedOrgs }}{{ . }} {{ end }}"
             - name: PAIR_ADMIN_EMAIL_DOMAIN
               value: "{{ .Values.adminEmailDomain }}"
+            - name: MAX_INSTANCE_LIMIT
+              value: "{{ .Values.maxInstancesForNonAdmins }}"
             - name: CANONICAL_URL
               value: "{{ (first .Values.ingress.hosts).host }}"
             {{- if .Values.client.extraEnv }}
