Update reconciler image tag

--- a/manifests/pair.yaml
+++ b/manifests/pair.yaml
@@ -74,6 +74,9 @@ spec:
                       values:
                         - clusterapimanager
                 topologyKey: "kubernetes.io/hostname"
+    reconciler:
+      image:
+        tag: ${SHARINGIO_PAIR_TAG}
     ingress:
       enabled: true
       certmanager:
