Remove TLS certs if about to expire

--- a/charts/sharingio-pair/templates/role-reconciler.yaml
+++ b/charts/sharingio-pair/templates/role-reconciler.yaml
@@ -9,6 +9,13 @@ metadata:
     {{- include "sharingio-pair.labels" . | nindent 4 }}
 rules:
   - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - get
+      - delete
+  - apiGroups:
       - cluster.x-k8s.io
     resources:
       - clusters
