--- a/manifests/pair.yaml
+++ b/manifests/pair.yaml
@@ -17,8 +17,8 @@ spec:
     adminEmailDomain: ii.coop
     instance:
       kubernetesVersion: 1.21.2
-      humacsRepository: registry.gitlab.com/humacs/humacs/ii
-      humacsVersion: 2021.10.06.0847
+      environmentRepository: registry.gitlab.com/sharingio/environment/ii
+      environmentVersion: 2021.11.12.1719
       nodeSize: m1.xlarge.x86
     sessionSecret: pairpairpairpair
     maxInstancesForNonAdmins: 1
