--- a/charts/sharingio-pair/templates/ingress-registry.yaml
+++ b/charts/sharingio-pair/templates/ingress-registry.yaml
@@ -1,30 +1,30 @@
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.registry.enabled -}}
 {{- $fullName := include "sharingio-pair.fullname" . -}}
-{{- $svcPort := .Values.client.service.port -}}
+{{- $svcPort := .Values.registry.service.port -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ $fullName }}-registry
   labels:
     {{- include "sharingio-pair.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  {{- with .Values.registry.ingress.annotations }}
   annotations:
-    {{- if $.Values.ingress.certmanager.enabled }}
+    {{- if $.Values.registry.ingress.certmanager.enabled }}
     cert-manager.io/cluster-issuer: {{ include "sharingio-pair.fullname" . }}-letsencrypt
     {{- end }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if .Values.ingress.certmanager }}
+  {{- if .Values.registry.ingress.certmanager }}
   tls:
     - hosts:
-    {{- range .Values.ingress.hosts }}
+    {{- range .Values.registry.ingress.hosts }}
         - {{ .host | quote }}
     {{- end }}
       secretName: {{ include "sharingio-pair.fullname" . }}-letsencrypt
-  {{- else if .Values.ingress.tls }}
+  {{- else if .Values.registry.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
+    {{- range .Values.registry.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -33,7 +33,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
+    {{- range .Values.registry.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
@@ -42,7 +42,7 @@ spec:
             pathType: ImplementationSpecific
             backend:
               service:
-                name: {{ $fullName }}-client
+                name: {{ $fullName }}-registry
                 port:
                   number: {{ $svcPort }}
           {{- end }}
