Update ingress class in Pair dev registry

--- a/.sharing.io/pair-dev-registry.yaml
+++ b/.sharing.io/pair-dev-registry.yaml
@@ -122,6 +122,7 @@ metadata:
   name: sharingio-pair-registry
   namespace: sharingio-pair
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - "docker-mirror.${SHARINGIO_PAIR_BASE_DNS_NAME}"
