--- a/manifests/pair.yaml
+++ b/manifests/pair.yaml
@@ -16,7 +16,7 @@ spec:
       kubernetesVersion: 1.23.5
       environmentRepository: registry.gitlab.com/sharingio/environment/environment
       environmentVersion: 2022.03.30.1618
-      nodeSize: c2.medium.x86
+      nodeSize: n2.xlarge.x86
     sessionSecret: pairpairpairpair
     maxInstancesForNonAdmins: 1
     githubOAuth:
