--- a/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
+++ b/charts/sharingio-pair/templates/deployment-cluster-api-manager.yaml
@@ -72,13 +72,13 @@ spec:
             {{- if .Values.instance.nodeSize }}
             - name: APP_INSTANCE_NODE_SIZE
               value: {{ .Values.instance.nodeSize }}
+            {{- end }}
             - name: APP_ADMIN_EMAIL_DOMAIN
               value: "{{ .Values.adminEmailDomain }}"
             - name: APP_NON_ADMIN_INSTANCE_MAX_AMOUNT
               value: "{{ .Values.maxInstancesForNonAdmins }}"
             - name: APP_INSTANCE_CONTAINER_REGISTRY_MIRRORS
-              value: "{{ range .Values.registry.ingress.hosts }}https://{{ .host }} {{ end }}{{ range .Values.instance.extraRegistryMirrors }}https://{{ . }} {{ end }}"
-            {{- end }}
+              value: "{{ range .Values.registry.mirrors }}https://{{ .name }}{{ $.Values.registry.ingress.domainSuffix }} {{ end }}{{ range .Values.instance.extraRegistryMirrors }}https://{{ . }} {{ end }}"
             {{- if .Values.clusterapimanager.extraEnv }}
             {{- toYaml .Values.clusterapimanager.extraEnv | nindent 12 }}
             {{- end }}
