--- a/charts/sharingio-pair/templates/ingress-registry.yaml
+++ b/charts/sharingio-pair/templates/ingress-registry.yaml
@@ -19,6 +19,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  ingressClassName: {{ $.Values.ingress.className }}
   {{- if $.Values.registry.ingress.certmanager }}
   tls:
     - hosts:
