Add registry mirroring header

--- a/.sharing.io/pair-dev-registry.yaml
+++ b/.sharing.io/pair-dev-registry.yaml
@@ -19,6 +19,7 @@ data:
       headers:
         X-Content-Type-Options:
         - nosniff
+        Registry-Mirrors-From: [docker]
     log:
       fields:
         service: registry
