--- a/charts/sharingio-pair/templates/configmap-registry.yaml
+++ b/charts/sharingio-pair/templates/configmap-registry.yaml
@@ -27,6 +27,7 @@ data:
       addr: :5000
       headers:
         X-Content-Type-Options: [nosniff]
+        Registry-Mirrors-From: {{ .name }}
     health:
       storagedriver:
         enabled: true
